--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
+    "nodemailer": "^6.4.6",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "socket.io": "^2.3.0"
