--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cadbygard",
-  "version": "B2.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,12 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "nodemailer": "^6.4.6",
     "path": "^0.12.7",
-    "readline": "^1.3.0",
     "socket.io": "^2.3.0"
   }
 }
