--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "bcrypt": "^4.0.1",
+    "discord.js": "^12.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
