--- a/WebsiteDiscordBot/cad/package.json
+++ b/WebsiteDiscordBot/cad/package.json
@@ -12,6 +12,7 @@
     "async": "^3.2.0",
     "bcrypt": "^5.0.0",
     "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
